syntax = "proto3";

package taskboard.v1;

option go_package = "github.com/smarrog/task-board/shared/proto/base/v1;v1";

import "base/v1/common.proto";
import "base/v1/tasks.proto";

message Column {
  string id = 1;
  string board_id = 2;
  int32 position = 3;
}

message CreateColumnRequest {
  BaseRequest base = 1;
  string board_id = 2;
  int32 position = 3;
}
message CreateColumnResponse {
  BaseResponse base = 1;
  Column column = 2;
}

message GetColumnRequest {
  BaseRequest base = 1;
  string column_id = 2;
}
message GetColumnResponse {
  BaseResponse base = 1;
  Column column = 2;
}

message ColumnFull {
  Column column = 1;
  repeated Task tasks = 2;
}

message GetColumnFullRequest {
  BaseRequest base = 1;
  string column_id = 2;
}

message GetColumnFullResponse {
  BaseResponse base = 1;
  ColumnFull data = 2;
}

message MoveColumnRequest {
  BaseRequest base = 1;
  string column_id = 2;
  int32 to_position = 3;
}
message MoveColumnResponse {
  BaseResponse base = 1;
  Column column = 2;
}

message DeleteColumnRequest {
  BaseRequest base = 1;
  string column_id = 2;
}

message DeleteColumnResponse {
  BaseResponse base = 1;
}

service ColumnsService {
  rpc CreateColumn(CreateColumnRequest) returns (CreateColumnResponse);
  rpc GetColumn(GetColumnRequest) returns (GetColumnResponse);
  rpc GetColumnFull(GetColumnFullRequest) returns (GetColumnFullResponse);
  rpc MoveColumn(MoveColumnRequest) returns (MoveColumnResponse);
  rpc DeleteColumn(DeleteColumnRequest) returns (DeleteColumnResponse);
}